--- a/bigbluebutton-client/branding/default/style/css/conferenciaCorpTheme.css
+++ b/bigbluebutton-client/branding/default/style/css/conferenciaCorpTheme.css
@@ -6,7 +6,7 @@ ApplicationControlBar {
   highlightAlphas: 0.1, 0;
   fillAlphas: 0, 0;
   fillColors: #A32C32, #A32C32;
-  backgroundColor: #D1232A;
+  backgroundColor: #BB282E;
   backgroundAlpha: 1;
   cornerRadius: 0;
   dropShadowEnabled: true;
